<resources>
    <string name="app_name">Hangboard</string>
    <string name="add_hangboard">Add hangboard</string>
    <string name="history_add_details">Add details to your training by edit.</string>
    <string name="date_format">yyyy-MM-dd HH:mm</string>
    <string name="edit_details">EDIT DETAILS</string>
    <string name="edit_details_name">Name</string>
    <string name="header_hang">Hang</string>
    <string name="header_rest">Rest</string>
    <string name="header_repeats">Repeats</string>
    <string name="header_pause">Pause</string>
    <string name="header_sets">Sets</string>
    <string name="unit_seconds">s</string>
    <string name="header_edge_size">Edge size</string>
    <string name="header_grip_type">Grip type</string>
    <string name="header_slope_angle">Slope angle</string>
    <string name="header_crimp_type">Crimp type</string>
    <string name="header_additional_weight">Additional weight</string>
    <string name="grip_menu_option_crimp">Crimp</string>
    <string name="grip_menu_option_sloper">Sloper</string>
    <string name="grip_menu_option_jug">Jug</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_close">CLOSE</string>
    <string name="btn_edit">EDIT</string>
    <string name="grip_menu_option_one_finger">One finger</string>
    <string name="grip_menu_option_two_fingers">Two fingers</string>
    <string name="grip_menu_option_three_fingers">Three fingers</string>
    <string name="grip_menu_option_pinch">Pinch</string>
    <string name="grip_menu_option_other">Other</string>
    <string name="grip_menu_option_edge">Edge</string>
    <string name="history_note_hint">Notes</string>
    <string name="unit_kg">kg</string>
    <string name="unit_degree">°</string>
    <string name="unit_milimeters">mm</string>
    <string name="crimp_menu_option_open_hand">Open hand</string>
    <string name="crimp_menu_option_open_crimp">Open crimp</string>
    <string name="crimp_menu_option_closed_crimp">Closed crimp</string>
    <string name="undefined">Undefined</string>
    <string name="fab_saved_configuration_description">Add confgiuration</string>
    <string name="fab_history_description">Add training</string>
    <string name="add_training">ADD TRAINING</string>
    <string name="date">Date</string>
    <string name="notificationRequestMessage">We will ask you for notification permission. If you want to see the hangboard timer in the notification bar, you should accept request. Otherwise, you can reject it now and manually grant it later in the settings</string>
    <string name="notificationRequestTitle">Notification Timer</string>
    <string name="notificationRequestButtonText">Ok</string>
    <string name="ButtonStop">STOP</string>
    <string name="ButtonReset">RESET</string>
    <string name="hangboardStateWaiting">WAITING FOR START</string>
    <string name="dialogCustomQuestionButtonYes">YES</string>
    <string name="dialogCustomQuestionButtonNo">NO</string>
    <string name="historyItemCrimpTypeOpenHand">OH</string>
    <string name="historyItemCrimpTypeOpenCrimp">OC</string>
    <string name="historyItemCrimpTypeClosedCrimp">CC</string>
    <string name="historyDetailsIntensity">Training intensity</string>
    <string name="unit_percent">%</string>
    <string name="no_saved_configs_msg">Add training setups with the plus button</string>
    <string name="history_no_records_msg">No history records in device memory</string>
    <string name="open">Open menu</string>
    <string name="close">Close menu</string>

</resources>