<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.HangboardActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="DETAILS"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvHangboardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Hangboard name"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="2022.11.30 17:51"
        android:textSize="16sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvHangboardName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/llSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/llHeaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ll_row_border"
            android:layout_marginVertical="10dp"

            >

            <TextView
                android:id="@+id/tvHeaderHang"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:text="Hang"
                android:gravity="center"
                android:textSize="@dimen/time" />

            <TextView
                android:id="@+id/tvHeaderRest"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="7dp"
                android:text="Rest"
                android:gravity="center"
                android:textSize="@dimen/time" />

            <TextView
                android:id="@+id/tvHeaderRepeats"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:text="Repeats"
                android:gravity="center"
                android:textSize="@dimen/time" />

            <TextView
                android:id="@+id/tvHeaderPause"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="7dp"
                android:text="Pause"
                android:gravity="center"
                android:textSize="@dimen/time" />

            <TextView
                android:id="@+id/tvHeaderSeries"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:text="Sets"
                android:gravity="center"
                android:textSize="@dimen/time" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/llHeaders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ll_row_border">


            <LinearLayout
                android:id="@+id/llHangTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/tvHangTime"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    tools:text="15"
                    android:gravity="center"
                    android:textSize="@dimen/time" />

                <TextView
                    android:id="@+id/tvUnitHangTime"
                    android:layout_width="15dp"
                    android:layout_height="30dp"
                    android:text="s"
                    android:gravity="center"
                    android:textSize="@dimen/time" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/palette3" />

            <LinearLayout
                android:id="@+id/llRestTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/tvRestTime"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    tools:text="15"
                    android:gravity="center"
                    android:textSize="@dimen/time" />

                <TextView
                    android:id="@+id/tvUnitRestTime"
                    android:layout_width="15dp"
                    android:layout_height="30dp"
                    android:text="s"
                    android:gravity="center"
                    android:textSize="@dimen/time" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/palette3" />

            <LinearLayout
                android:id="@+id/llRoundsToEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/tvRepeats"
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    tools:text="15"
                    android:gravity="center"
                    android:textSize="@dimen/time" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/palette3" />

            <LinearLayout
                android:id="@+id/llPauseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/tvPauseTime"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    tools:text="15"
                    android:gravity="center"
                    android:textSize="@dimen/time" />

                <TextView
                    android:id="@+id/tvUnitPauseTime"
                    android:layout_width="15dp"
                    android:layout_height="30dp"
                    android:text="s"
                    android:gravity="center"
                    android:textSize="@dimen/time" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/palette3" />

            <LinearLayout
                android:id="@+id/llSetsToEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="6dp">

                <TextView
                    android:id="@+id/tvSets"
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    tools:text="15"
                    android:gravity="center"
                    android:textSize="@dimen/time" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llSeries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"

        >

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Add details to your training."
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/llGripType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/ll_row_border"
            android:gravity="center"

            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/ic_baseline_drag_handle_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textSize="16sp"
                android:text="Grip type" />

            <TextView
                android:id="@+id/tvGripType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="5dp"
                tools:text="Crimp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEdgeSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/ll_row_border"
            android:gravity="center"

            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/ic_baseline_height_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textSize="16sp"
                android:text="Edge size" />

            <TextView
                android:id="@+id/tvEdgeSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="5dp"
                tools:text="20 mm" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSlopeAngle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/ll_row_border"
            android:gravity="center"

            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginHorizontal="5dp"
                android:scaleX="-1"
                android:src="@drawable/ic_baseline_rotate_90_degrees_cw_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textSize="16sp"
                android:text="Slope angle" />

            <TextView
                android:id="@+id/tvSlopeAngle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="5dp"
                tools:text="30°" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCrimpType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/ll_row_border"
            android:gravity="center"

            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/ic_baseline_front_hand_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textSize="16sp"
                android:text="Crimp type" />

            <TextView
                android:id="@+id/tvCrimpType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="5dp"
                tools:text="Open" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAdditionalWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/ll_row_border"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/ic_baseline_balance_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textSize="16sp"
                android:text="Additional weight" />

            <TextView
                android:id="@+id/tvAdditionalWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="5dp"
                tools:text="20 kg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llIntensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/ll_row_border"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/ic_baseline_percent_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textSize="16sp"
                android:text="@string/historyDetailsIntensity" />

            <TextView
                android:id="@+id/tvIntensity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="5dp"
                tools:text="75 %" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/ll_row_border"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Autofill"
                android:maxLines="6"
                android:lines="6"
                android:minLines="6"
                android:maxLength="250"
                android:gravity="top|start"
                android:scrollbars="vertical"
                android:hint="@string/history_note_hint" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/palette3"
            android:text="@string/btn_edit"
            android:layout_margin="10dp"
            android:textColor="@color/white"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/palette5"
            android:text="@string/btn_close"
            android:layout_margin="10dp"
            android:textColor="@color/white"

            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>